src/test/ui/issues/issue-20692.stderr
error[E0038]: the trait `Array` cannot be made into an object
  --> $DIR/issue-20692.rs:7:5
   |
LL | trait Array: Sized + Copy {}
   |              -----   ---- the trait cannot require that `Self : Sized`
   |              |
   |              the trait cannot require that `Self : Sized`
...
LL |     &dyn Array;
   |     ^^^^^^^^^^ the trait `Array` cannot be made into an object

error[E0038]: the trait `Array` cannot be made into an object
  --> $DIR/issue-20692.rs:4:13
   |
LL | trait Array: Sized + Copy {}
   |              -----   ---- the trait cannot require that `Self : Sized`
   |              |
   |              the trait cannot require that `Self : Sized`
...
LL |     let _ = x
   |             ^ the trait `Array` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Array>` for `&T`
   = note: required by cast to type `&dyn Array`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
